Bezier curve handles display wrong connection #59490

Closed
opened 2018-12-17 13:39:15 +01:00 by William Reynish · 5 comments

System Information
Operating system: macOS 10.14.2 (18C54)
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: 2.80, Dec 17 2018
Worked: 2.79

Short description of error
The bezier curve handles in Blender 2.8 display the wrong connection lines

Exact steps for others to reproduce the error

  • Add a Bezier Curve
  • Set handle type to Vector
  • Move handles so they are not parallel
  • You will see that the lines are not correctly connected to the right vertex

Blender 2.79 shows the correct connection from vertex to handles:
Screenshot 2018-12-17 at 13.35.18.png

Blender 2.80 beta shows the wrong connection from vertex to handles:
Screenshot 2018-12-17 at 13.35.28.png

Blend files which works in both 2.7x and 2.8:
vector_curve_handle_bug.blend

**System Information** Operating system: macOS 10.14.2 (18C54) Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: 2.80, Dec 17 2018 Worked: 2.79 **Short description of error** The bezier curve handles in Blender 2.8 display the wrong connection lines **Exact steps for others to reproduce the error** - Add a Bezier Curve - Set handle type to Vector - Move handles so they are not parallel - You will see that the lines are not correctly connected to the right vertex Blender 2.79 shows the correct connection from vertex to handles: ![Screenshot 2018-12-17 at 13.35.18.png](https://archive.blender.org/developer/F5980219/Screenshot_2018-12-17_at_13.35.18.png) Blender 2.80 beta shows the wrong connection from vertex to handles: ![Screenshot 2018-12-17 at 13.35.28.png](https://archive.blender.org/developer/F5980224/Screenshot_2018-12-17_at_13.35.28.png) Blend files which works in both 2.7x and 2.8: [vector_curve_handle_bug.blend](https://archive.blender.org/developer/F5980214/vector_curve_handle_bug.blend)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

#59472 was marked as duplicate of this issue

#59472 was marked as duplicate of this issue
Jacques Lucke self-assigned this 2018-12-17 13:41:32 +01:00
Member

Added subscribers: @vma, @lichtwerk, @GrahamHeld

Added subscribers: @vma, @lichtwerk, @GrahamHeld

This issue was referenced by bb58354232

This issue was referenced by bb583542324ffe5ed6a1d71e1ab341e413736499
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59490
No description provided.