Fix T59490: wrong curve handle lines